--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.2.9"
   },
   "name": "potterybarn_clone",
@@ -8,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon src/server"
+    "server": "nodemon src/server"
   },
   "repository": {
     "type": "git",
